--- a/pom.xml
+++ b/pom.xml
@@ -49,18 +49,18 @@
 	</developers>
 	<properties>
 		<ver.package.dir>com/${project.artifactId}/version</ver.package.dir>
-	    <ver.package.name>com.${project.artifactId}.version</ver.package.name>
-	    <ver.class.name>Version</ver.class.name>
-	    <ver.appversion>${project.version}</ver.appversion>
-	    <maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
-	    <ver.template.dir>src/main/resources/version</ver.template.dir>
-	    <ver.template.file>VersionJava.template</ver.template.file>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jersey.version>2.16</jersey.version>
+		<ver.package.name>com.${project.artifactId}.version</ver.package.name>
+		<ver.class.name>Version</ver.class.name>
+		<ver.appversion>${project.version}</ver.appversion>
+		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
+		<ver.template.dir>src/main/resources/version</ver.template.dir>
+		<ver.template.file>VersionJava.template</ver.template.file>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>2.16</jersey.version>
 	</properties>
 
 	<dependencies>
-	    <dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.6.3</version>
@@ -70,7 +70,7 @@
 			<artifactId>jersey-client</artifactId>
 			<version>2.17</version>
 		</dependency>
-        <dependency>
+		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>8.0.30</version>
@@ -81,20 +81,20 @@
 			<version>20151123</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.glassfish.jersey.core</groupId>
-		    <artifactId>jersey-server</artifactId>
-		    <version>2.17</version>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>2.17</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.glassfish.jersey.containers</groupId>
-		    <artifactId>jersey-container-servlet-core</artifactId>
-		    <version>2.17</version>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet-core</artifactId>
+			<version>2.17</version>
 		</dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-moxy</artifactId>
-            <version>2.17</version>
-        </dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-moxy</artifactId>
+			<version>2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -145,65 +145,71 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ibm.watson.developer_cloud</groupId>
+			<artifactId>java-wrapper</artifactId>
+			<version>0.1.9</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
-	        <resource>
-	            <directory>src/main/resources</directory>
-	            <excludes>
-	                <exclude>version/*</exclude>
-	            </excludes>
-	        </resource>
-	        <resource>
-	            <directory>${ver.template.dir}</directory>
-	            <includes>
-	                <include>*.java</include>
-	            </includes>
-	            <filtering>true</filtering>
-	            <targetPath>${basedir}/src/main/java/${ver.package.dir}</targetPath>
-	        </resource>
-	    </resources>    
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>version/*</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>${ver.template.dir}</directory>
+				<includes>
+					<include>*.java</include>
+				</includes>
+				<filtering>true</filtering>
+				<targetPath>${basedir}/src/main/java/${ver.package.dir}</targetPath>
+			</resource>
+		</resources>
 		<finalName>magus</finalName>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-		    <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-                <execution>
-                	<id>2</id>
-                    <phase>generate-sources</phase>
-                    <configuration>
-                        <tasks>
-                            <copy file="${ver.template.dir}/${ver.template.file}" tofile="${ver.template.dir}/${ver.class.name}.java" />
-                        </tasks>
-                    </configuration>
-                    <goals>
-                        <goal>run</goal>
-                    </goals>
-                </execution>
-                <execution>
-                	<id>1</id>
-                    <phase>compile</phase>
-                    <configuration>
-                        <tasks>
-                            <delete file="${ver.template.dir}/${ver.class.name}.java" />
-                        </tasks>
-                    </configuration>
-                    <goals>
-                        <goal>run</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<inherited>true</inherited>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>2</id>
+						<phase>generate-sources</phase>
+						<configuration>
+							<tasks>
+								<copy file="${ver.template.dir}/${ver.template.file}"
+									tofile="${ver.template.dir}/${ver.class.name}.java" />
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>1</id>
+						<phase>compile</phase>
+						<configuration>
+							<tasks>
+								<delete file="${ver.template.dir}/${ver.class.name}.java" />
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
